# acc

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  DIRECTORY_STRUCTURE.md  LICENSE  PROJECT_PLAN.md  README.md  TODO.md  requirements.txt
.github/workflows/: TODO.md  build.yml
benchmark/: CMakeLists.txt
benchmark/cpu/: bench_conv.cpp  bench_matmul.cpp
benchmark/reports/: baseline.md
benchmarks/: README.md
cmake/: ACompilerOptions.cmake  AddACompiler.cmake  FindLLVM.cmake  FindMLIR.cmake  LLVMConfigHelpers.cmake
docs/: 00_overview.md  01_build.md  02_mlir_concepts.md  03_pass_dev.md  04_lowering_pipeline.md  05_llvm_backend.md  06_runtime_abi.md  ACompiler_Plan.md  ACompiler_Project_Plan.md  CHECKLIST.md  DIRECTORY_STRUCTURE.md  DIRECTORY_STRUCTURE_en.md  Doxyfile  GETTING_STARTED.md  GETTING_STARTED_zh.md  IMPLEMENTATION_GUIDE.md  LEARNING_ROADMAP.md  LLVM_Backend_Notes.md  Lowering_Guide.md  MLIR_Concepts.md  MLIR_Key_Concepts.md  Makefile  PROJECT_PLAN.md  PROJECT_PLAN_en.md  PROJECT_PLAN_zh.md  Pass_Development_Guide.md  Pass_Writing_Guide.md  README.md  README_zh.md  Roadmap.md  TODO.md  TODO_en.md  capability-radar-roadmap.md  conf.py  development.md  index.rst  index_zh.rst  requirements.txt
docs/_static/: language-switcher.js
docs/api/: index.rst
docs/design/: architecture.md
docs/tutorials/: 01_mlir_basics.md  02_custom_dialect.md
examples/: CMakeLists.txt  README.md
examples/dsl/: hello.ac  simple_net.ac
examples/e2e/: pytorch_triton_acc_e2e.py  triton_matmul_to_acc.py
examples/end_to_end/: .gitkeep
examples/hello_dialect/: .gitkeep
examples/mlir/: README.md  conv2d_bias_relu.mlir  elementwise_add_relu.mlir  fusion.mlir  matmul.mlir  resnet_block.mlir  simple_ops.mlir  transformer_block.mlir
examples/model/: tiny_mlp.json
examples/scripts/: dump_all_ir.sh  run_cpu_demo.sh
examples/simple_pass/: .gitkeep
examples/tutorials/01-build-llvm/: README.md  README_en.md
examples/tutorials/02-first-dialect/: README.md  README_en.md
examples/tutorials/03-define-ops/: README.md  README_en.md
examples/tutorials/04-write-pass/: README.md  README_en.md
examples/tutorials/05-lowering/: README.md  README_en.md
examples/tutorials/06-llvm-ir-opt/: README.md  README_en.md
examples/tutorials/07-codegen/: README.md  README_en.md
examples/tutorials/08-e2e-pipeline/: README.md  README_en.md
include/ACC/: InitAllDialects.h
include/ACC/CodeGen/: CPUCodeGen.h  CodeGenDriver.h  JITEngine.h
include/ACC/Conversion/: Passes.h
include/ACC/Frontend/: AST.h  Lexer.h  MLIRGen.h  ONNXImporter.h  Parser.h  Sema.h  Token.h  TorchImporter.h  TritonImporter.h
include/ACC/IROptimizer/: Passes.h
include/ACC/Support/: ErrorHandling.h  Logger.h  Timer.h
include/ACC/Transforms/: Passes.h  Passes.td
include/ACompiler/: Common.h  InitAllDialects.h  Version.h
include/ACompiler/CodeGen/: CPUCodeGen.h  CodeGenDriver.h  JITEngine.h
include/ACompiler/Conversion/: Passes.h
include/ACompiler/Frontend/: AST.h  Lexer.h  MLIRGen.h  ONNXImporter.h  Parser.h  Sema.h  Token.h
include/ACompiler/IROptimizer/: Passes.h
include/ACompiler/Support/: ErrorHandling.h  Logger.h  Timer.h
include/ACompiler/Transforms/: Passes.h  Passes.td
include/acompiler/: CMakeLists.txt  InitACompiler.h
include/acompiler/Conversion/: CMakeLists.txt  README.md
include/acompiler/Dialect/: README.md
lib/: CMakeLists.txt  InitACompiler.cpp
lib/CodeGen/: CMakeLists.txt  CPUCodeGen.cpp  CodeGenDriver.cpp  JITEngine.cpp
lib/Conversion/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Frontend/: AST.cpp  CMakeLists.txt  Lexer.cpp  MLIRGen.cpp  ONNXImporter.cpp  Parser.cpp  Sema.cpp  Token.cpp  TorchImporter.cpp  TritonImporter.cpp
lib/IROptimizer/: CMakeLists.txt  CustomLoopOpt.cpp  CustomVectorize.cpp  PassPipeline.cpp
lib/Runtime/: CMakeLists.txt
lib/Support/: CMakeLists.txt  ErrorHandling.cpp  Logger.cpp  Timer.cpp
lib/Transforms/: CMakeLists.txt  ConstantFolding.cpp  DeadCodeElimination.cpp  LayoutTransform.cpp  OpFusion.cpp  PassPipeline.cpp  ShapeInference.cpp
lib/acompiler/: CMakeLists.txt
lib/acompiler/Backend/AscendNPU/: README.md
lib/acompiler/Backend/CPU/: README.md
lib/acompiler/Backend/CUDA/: README.md
lib/acompiler/Conversion/: README.md
lib/acompiler/Dialect/ACompiler/: README.md
lib/acompiler/Frontend/: AST.cpp  Lexer.cpp  Parser.cpp
lib/acompiler/Runtime/: Executor.cpp  Tensor.cpp
lib/acompiler/Transforms/: README.md
runtime/: CMakeLists.txt  README.md
runtime/ascend/: README.md  README_en.md
runtime/cpu/: CMakeLists.txt  allocator.cpp  cpu_kernels.cpp  cpu_kernels.h  cpu_runtime.cpp  cpu_runtime.h  kernels.cpp  memory_manager.cpp  memory_manager.h
runtime/cuda/: README.md  README_en.md
runtime/include/: ac_runtime.h  acompiler_runtime.h
scripts/: README.md  acc_env.sh  build.sh  build_llvm.sh  configure.sh  format.sh  run_tests.sh
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/: .gitkeep
test/Dialect/: .gitkeep
test/Performance/: CMakeLists.txt  bench_conv2d.cpp  bench_matmul.cpp  benchmark.h
test/Tools/: ac-translate-import-onnx.mlir  acc-help.mlir
test/Transforms/: .gitkeep  constant-folding.mlir  dead-code-elimination.mlir  layout-transform.mlir  op-fusion.mlir  shape-inference.mlir
test/onnx-import-add/: README.md  gen_add_model.py  input.mlir  model.onnx
test/performance/: benchmark_framework.cpp  conv2d_benchmark.cpp
test/smoke/: basic.mlir  smoke_test.cpp
tools/: CMakeLists.txt
tools/ac-opt/: CMakeLists.txt  main.cpp
tools/ac-runner/: CMakeLists.txt  main.cpp
tools/ac-translate/: CMakeLists.txt  ONNXImportRegistration.cpp  main.cpp
tools/acc-compiler/: CMakeLists.txt  main.cpp
tools/acompiler/: CMakeLists.txt  main.cpp
tools/acompiler-c/: main.cpp
tools/acompiler-compile/: ACompilerCompile.cpp  CMakeLists.txt
tools/acompiler-opt/: ACompilerOpt.cpp  CMakeLists.txt  acompiler-opt.cpp  main.cpp
tools/acompiler-run/: main.cpp
tools/acompiler-translate/: main.cpp
tools/acompilerc/: CMakeLists.txt  acompilerc.cpp
unittests/: CMakeLists.txt
(+75 files in other folders)
